adding images and a paragraph

--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,31 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "images/image-one.jpg",
+        "config": {
+          "originalSize": 49282,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/image-two.jpg",
+        "config": {
+          "originalSize": 95492,
+          "optimized": true
+        }
+      },
+      {
+        "file": "styles/main.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      }
+    ]
   }
 }
